[package]
name = "didkit-wasm"
version = "0.4.0"
authors = ["Spruce Systems, Inc."]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
thiserror = "1.0"
js-sys = "0.3"
getrandom = { version = "0.2.7", features = ["js"] }
rand = { version = "0.7", features = ["wasm-bindgen"] }
chrono = { version = "0.4", features = ["wasmbind"] }
iref = "^2.0.3"

[dependencies.didkit]
path = "../"
default-features = false
features = ["ed25519", "rsa", "ripemd-160", "eip", "tezos"]

[dependencies.did-ethr]
path = "../../../ssi/did-ethr"
default-features = false

[dependencies.did-ethr]
path = "../../../ssi/did-ethr"
default-features = false

[dev-dependencies]
wasm-bindgen-test = "0.2"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["generate", "issue", "verify", "invoke", "delegate"]

generate = []
issue = []
verify = []
credential = []
presentation = []
delegate = []
invoke = []
zcap = []
