[package]
name = "didkit-wasm"
version = "0.4.0"
authors = ["Spruce Systems, Inc."]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
thiserror = "1.0"
js-sys = "0.3"
getrandom = { version = "0.2.7", features = ["js"] }
rand = { version = "0.7", features = ["wasm-bindgen"] }
chrono = { version = "0.4", features = ["wasmbind"] }
iref = "^2.0.3"
ed25519-dalek = { version = "1" }
rand_chacha = "0.3"
x25519-dalek = "2.0"
curve25519-dalek = "4.0"
aes-gcm = "0.10"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hkdf = "0.12"
sha2 = "0.10"
base64url = "0.1"
bs58 = "0.5"
chacha20poly1305 = "0.10"
byteorder = "1.5.0"
libipld = { version = "0.16", features = ["serde-codec"]}
multihash = { version = "^0.18.0", features = ["identity"] }

[dependencies.didkit]
path = "../"
default-features = false
features = ["ed25519", "rsa", "ripemd-160", "eip", "tezos", "secp256r1"]

[dependencies.did-ethr]
path = "../../../ssi/did-ethr"
default-features = false

[dev-dependencies]
wasm-bindgen-test = "0.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
opt-level = 'z'

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["generate", "issue", "verify", "invoke", "delegate"]

generate = []
issue = []
verify = []
credential = []
presentation = []
delegate = []
invoke = []
zcap = []
